# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "tp-helm-ais"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AIS / NMEA 0183 sentence parsing and message decoding for TPT Helm"

[dependencies]
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "decode"
harness = false

[lints]
workspace = true

